--- a/src/app/styles/overlayContainer.css
+++ b/src/app/styles/overlayContainer.css
@@ -2,7 +2,7 @@
   top: 56px; /* '메인품목리스트' 헤더의 실제 위치에 따라 조정하세요 */
   right: 0;
   width: fit-content;
-  min-width: 25%; /* 필요에 따라 너비 조정 */
+  min-width: 25%;
   z-index: 1; /* 다른 요소 위에 나타나도록 높은 z-index */
   overflow-y: auto; /* 내용이 높이를 초과할 경우 스크롤 추가 */
   padding: 10px; /* 오버레이 내부의 패딩 */
@@ -15,8 +15,12 @@
 }
 .list-container {
   display: flex;
+  background: transparent;
 }
 
+.overlay-container.Close {
+  display: none;
+}
 .toggle-button {
   background-color: transparent;
   border: none;
