--- a/src/app/styles/overlayContainer.css
+++ b/src/app/styles/overlayContainer.css
@@ -1,11 +1,11 @@
 .overlay-container {
   top: 56px; /* '메인품목리스트' 헤더의 실제 위치에 따라 조정하세요 */
   right: 0;
-  width: fit-content;
-  min-width: 25%;
-  z-index: 1; /* 다른 요소 위에 나타나도록 높은 z-index */
-  overflow-y: auto; /* 내용이 높이를 초과할 경우 스크롤 추가 */
-  padding: 10px; /* 오버레이 내부의 패딩 */
+  width: fit-content !important;
+  /* min-width: 500px; */
+  z-index: 1;
+  overflow-y: hidden;
+  padding: 10px;
 }
 
 .toggle-icon {
@@ -18,9 +18,10 @@
   background: transparent;
 }
 
-.overlay-container.Close {
+.Close {
   display: none;
 }
+
 .toggle-button {
   background-color: transparent;
   border: none;
@@ -28,4 +29,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.truncate {
+  width: 250px; /* 또는 원하는 최대 너비 */
+  white-space: nowrap; /* 텍스트를 한 줄로 처리 */
+  overflow: hidden; /* 넘치는 내용을 숨김 */
+  text-overflow: ellipsis; /* 넘치는 텍스트를 ...으로 표시 */
 }
