--- a/src/app/styles/overlayContainer.css
+++ b/src/app/styles/overlayContainer.css
@@ -1,8 +1,8 @@
 .overlay-container {
-  top: 56px; /* '메인품목리스트' 헤더의 실제 위치에 따라 조정하세요 */
+  top: 56px;
   right: 0;
   width: fit-content !important;
-  /* min-width: 500px; */
+  min-width: 500px;
   z-index: 1;
   overflow-y: hidden;
   padding: 10px;
@@ -16,6 +16,7 @@
 .list-container {
   display: flex;
   background: transparent;
+  background-color: #f5f5f5;
 }
 
 .Close {
@@ -32,8 +33,8 @@
 }
 
 .truncate {
-  width: 250px; /* 또는 원하는 최대 너비 */
-  white-space: nowrap; /* 텍스트를 한 줄로 처리 */
-  overflow: hidden; /* 넘치는 내용을 숨김 */
-  text-overflow: ellipsis; /* 넘치는 텍스트를 ...으로 표시 */
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
